--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-light navbar-expand-lg" style="background-color: #2bce99;">
-  <a class="navbar-brand" href="#"><img src="../assets/img/logo.png" class="d-inline-block align-top" style="margin-right:10px;"  width="35" height="35" alt="...">Promovidos</a>
+<nav class="navbar navbar-dark navbar-expand-lg" style="background-color: #ff015d;">
+  <a class="navbar-brand" style="color: #FFFFFF;" [routerLink]="['/home']"><img src="../assets/img/logo.png" class="d-inline-block align-top" style="margin-right:10px;"  width="35" height="35" alt="...">Promovidos 2018</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
    <span class="navbar-toggler-icon"></span>
  </button>
@@ -8,14 +8,22 @@
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
   </form-->
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-    <div class="form-inline my-2 my-lg-0" style="position:absolute; right: 30px;">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0 ">
-        <li class="nav-item">
-          <a class="nav-link text-white" [routerLink]="['/login']" href="#">Salir</a>
-        </li>
-      </ul>
-    </div>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/promover']">Promover <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/promovidos']">Promovidos</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/usuarios']">Usuarios</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav form-inline my-2 my-sm-0">
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/login']" href="#">Salir</a>
+      </li>
+    </ul>
   </div>
 
 </nav>
