--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -21,7 +21,7 @@
     </ul>
     <ul class="navbar-nav form-inline my-2 my-sm-0">
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/login']" href="#">Salir</a>
+        <a class="nav-link text-white" [routerLink]="['/login']" href="#">Salir</a>
       </li>
     </ul>
   </div>
