--- a/src/app/components/promover/promover.component.html
+++ b/src/app/components/promover/promover.component.html
@@ -74,19 +74,112 @@
     Please provide a valid zip.
   </div>
 </div>
-</div>
-<div class="form-group">
-<div class="form-check">
-  <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-  <label class="form-check-label" for="invalidCheck">
-    Agree to terms and conditions
-  </label>
+<div class="col-md-1 mb-3">
+  <label for="validationCustom05">Edad</label>
+  <input type="text" class="form-control" id="validationCustom05" placeholder="Edad" name="edad" required>
   <div class="invalid-feedback">
-    You must agree before submitting.
+    Please provide a valid zip.
   </div>
 </div>
+<div class="col-md-3 mb-3">
+  <label for="validationCustom05">Clave Elector</label>
+  <input type="text" class="form-control" id="validationCustom05" placeholder="18 digitos" maxlength="18" name="claveele" required>
+  <div class="invalid-feedback">
+    Please provide a valid zip.
+  </div>
 </div>
-<button class="btn btn-primary" style="background-color: #ff015d; border-color: #ff015d;" type="submit">Registrar</button>
+<div class="col-md-3 mb-3">
+  <label for="validationCustom05">Fecha Nacimiento</label>
+  <input type="date" class="form-control" id="validationCustom05" name="fechan" required>
+  <div class="invalid-feedback">
+    Please provide a valid zip.
+  </div>
+</div>
+<div class="col-md-3 mb-3">
+  <label for="validationCustom05">Sección</label>
+  <select class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+    <option value="0">Seleccione sección</option>
+    <option *ngFor="let seccion of secciones" value="{{seccion.seccion}}">{{seccion.seccion}}</option>
+  </select>
+  <div class="invalid-feedback">
+    Please provide a valid zip.
+  </div>
+</div>
+<div class="col-md-2 mb-3">
+  <label for="validationCustom05">Teléfono</label>
+  <input type="text" class="form-control" id="validationCustom05" placeholder="10 digitos" maxlength="10" name="claveele" required>
+  <div class="invalid-feedback">
+    Please provide a valid zip.
+  </div>
+</div>
+<div class="col-md-3 mb-3">
+  <label for="validationCustom05">Celular</label>
+  <input type="text" class="form-control" id="validationCustom05" placeholder="10 digitos" maxlength="10" name="claveele" required>
+  <div class="invalid-feedback">
+    Please provide a valid zip.
+  </div>
+</div>
+<div class="col-md-3 mb-3">
+  <label for="validationCustom05">Correo</label>
+  <input type="email" class="form-control" id="validationCustom05" placeholder="Ingrese correo" name="claveele" required>
+  <div class="invalid-feedback">
+    Please provide a valid zip.
+  </div>
+</div>
+<div class="col-md-3 mb-3">
+  <label for="validationCustom05">Facebook</label>
+  <input type="email" class="form-control" id="validationCustom05" placeholder="Ingrese facebook" name="claveele" required>
+  <div class="invalid-feedback">
+    Please provide a valid zip.
+  </div>
+</div>
+<div class="col-md-3 mb-3">
+  <label for="validationCustom05">Twitter</label>
+  <input type="email" class="form-control" id="validationCustom05" placeholder="Ingrese twitter" name="claveele" required>
+  <div class="invalid-feedback">
+    Please provide a valid zip.
+  </div>
+</div>
+<div class="col-md-4 mb-3">
+  <label for="validationCustom05">Responsable distrital</label>
+  <select class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+    <option value="0">Seleccione sexo</option>
+    <option value="M">Masculino</option>
+    <option value="F">Femenino</option>
+  </select>
+  <div class="invalid-feedback">
+    Please provide a valid zip.
+  </div>
+</div>
+<div class="col-md-4 mb-3">
+  <label for="validationCustom05">Responsable seccional</label>
+  <select class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+    <option value="0">Seleccione sexo</option>
+    <option value="M">Masculino</option>
+    <option value="F">Femenino</option>
+  </select>
+  <div class="invalid-feedback">
+    Please provide a valid zip.
+  </div>
+</div>
+<div class="col-md-4 mb-3">
+  <label for="validationCustom05">Origen de información</label>
+  <select class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+    <option value="0">Seleccione sexo</option>
+    <option value="M">Masculino</option>
+    <option value="F">Femenino</option>
+  </select>
+  <div class="invalid-feedback">
+    Please provide a valid zip.
+  </div>
+</div>
+<div class="col-md-12 mb-3">
+  <label for="validationCustom05">Observaciones</label>
+  <textarea class="form-control textprom" placeholder="Observaciones"></textarea>
+</div>
+</div>
+
+<button class="btn btn-primary" style="background-color: #ff015d; border-color: #ff015d; float: right;" type="submit">Registrar</button>
 </form>
 
 <script>
