--- a/src/app/components/promover/promover.component.html
+++ b/src/app/components/promover/promover.component.html
@@ -128,36 +128,35 @@
 </div>
 <div class="col-md-3 mb-3">
   <label for="validationCustom05">Facebook</label>
-  <input type="email" class="form-control" id="validationCustom05" placeholder="Ingrese facebook" name="claveele" required>
+  <input type="text" class="form-control" id="validationCustom05" placeholder="Ingrese facebook" name="claveele" required>
   <div class="invalid-feedback">
     Please provide a valid zip.
   </div>
 </div>
 <div class="col-md-3 mb-3">
   <label for="validationCustom05">Twitter</label>
-  <input type="email" class="form-control" id="validationCustom05" placeholder="Ingrese twitter" name="claveele" required>
+  <input type="text" class="form-control" id="validationCustom05" placeholder="Ingrese twitter" name="claveele" required>
+  <div class="invalid-feedback">
+    Please provide a valid zip.
+  </div>
+</div>
+<div class="col-md-4 mb-3">
+  <label for="validationCustom05">Responsable Municipal</label>
+    <input type="text" class="form-control" id="validationCustom05" placeholder="Responsable Municipal" name="claveele" readonly required>
   <div class="invalid-feedback">
     Please provide a valid zip.
   </div>
 </div>
 <div class="col-md-4 mb-3">
   <label for="validationCustom05">Responsable distrital</label>
-  <select class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-    <option value="0">Seleccione sexo</option>
-    <option value="M">Masculino</option>
-    <option value="F">Femenino</option>
-  </select>
+  <input type="text" class="form-control" id="validationCustom05" placeholder="Responsable distrital" name="claveele" readonly required>
   <div class="invalid-feedback">
     Please provide a valid zip.
   </div>
 </div>
 <div class="col-md-4 mb-3">
   <label for="validationCustom05">Responsable seccional</label>
-  <select class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-    <option value="0">Seleccione sexo</option>
-    <option value="M">Masculino</option>
-    <option value="F">Femenino</option>
-  </select>
+  <input type="text" class="form-control" id="validationCustom05" placeholder="Responsable seccional" name="claveele" readonly required>
   <div class="invalid-feedback">
     Please provide a valid zip.
   </div>
