--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -16,6 +16,9 @@
         <a class="nav-link" [routerLink]="['/promovidos']">Promovidos</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/responsables']">Responsables</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/usuarios']">Usuarios</a>
       </li>
     </ul>
