--- a/src/app/components/promover/promover.component.html
+++ b/src/app/components/promover/promover.component.html
@@ -1,4 +1,3 @@
-
 <div>
   <app-navbar></app-navbar>
   <div class="container animated fadeIn">
@@ -6,8 +5,11 @@
     <div class="col-sm-12">
         <legend style="color: #ff015d">Agregar promovido:</legend>
     </div>
-    <form class="needs-validation col-sm-12" novalidate>
-<div class="form-row">
+    <div *ngIf="spin==true" class="mx-auto w-100 p-3" style="margin-left: 20%;margin-top: 13%;">
+       <div class="loader mx-auto" *ngIf="spin==true"></div>
+     </div>
+    <form *ngIf="spin==false" class="needs-validation col-sm-12" novalidate>
+<div  class="form-row">
 <div class="col-md-3 mb-3">
   <label for="validationCustom01">Nombre(s)</label>
   <input type="text" class="form-control" id="validationCustom01" placeholder="Ingrese nombre(s)" required>
